# Image-Blockifier

./: CMakeLists.txt  Makefile  README.md  main.cpp  pa3  partners.txt  stats.cpp  stats.h  twoDtree.cpp  twoDtree.h
.metadata/: version.ini
.metadata/.mylyn/.taskListIndex/: segments_1
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/: server-config.json
.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/http-cache.lucene60/: segments_1
.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/local-history.lucene60/: _0.cfe  _0.cfs  _0.si  segments_1
.metadata/.plugins/org.eclipse.jdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
pa3.dSYM/Contents/: Info.plist
pa3.dSYM/Contents/Resources/DWARF/: pa3
